--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ tqdm = "^4.64.1"
 black = "^22.12.0"
 isort = "^5.11.4"
 flake8 = "^6.0.0"
+ipykernel = "^6.21.0"
 
 [tool.isort]
 profile = "black"
